--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.12",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
